--- a/FEIStyle/FEIstyle.cls
+++ b/FEIStyle/FEIstyle.cls
@@ -106,6 +106,7 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage[acronym,nopostdot,nogroupskip,nonumberlist]{glossaries}
+\usepackage{amsmath}
 % \usepackage{showframe} % debugging overflows
 
 % Set the style of figure, table and equation numbering
