--- a/FEIStyle/includes/bibliography.bib
+++ b/FEIStyle/includes/bibliography.bib
@@ -9,6 +9,18 @@
   urldate = {2020-11-30}
 }
 
+@online{espGithub,
+  title = {{ESP-IDF GitHub Repository}},
+  url = {{https://github.com/espressif/esp-idf/tree/v4.4.7}},
+  urldate = {2024-05-25}
+}
+
+@online{espIDF,
+  title = {{ESP-IDF Visual Studio Code Extension}},
+  url = {{https://marketplace.visualstudio.com/items?itemName=espressif.esp-idf-extension}},
+  urldate = {2024-05-25}
+}
+
 @online{MRAC,
   editor = {Ing. Marián Tárník, PhD.},
   title = {{AR06\_txt\_MRAC\_vstupnovystupny.pdf}},
