--- a/FEIStyle/includes/core.tex
+++ b/FEIStyle/includes/core.tex
@@ -2,6 +2,21 @@
 
 \section{Hardware}
 \label{sec:hardware}
+Kolesá a ozubené koliečko pre hriadeľ motora boli vytlačené v 3D tlačiarni s resinovou náplňou \textbf{FabPro 1000 Resin Cartridge Tough BLK}. Na obrázkoch \ref{fig:gear} a \ref{fig:wheel_w_gear} môžeme vidieť návrhy ozubeého koliečka pre hriadeľ a kolesa. 
+
+\begin{figure}[!htbp]
+        \centering
+        \includegraphics[scale=0.8]{includes/images/motor_gear.png}
+        \caption{Užívateľské rozhranie s označenými komponentami}
+        \label{fig:gear}
+\end{figure}
+
+\begin{figure}[!htbp]
+        \centering
+        \includegraphics[scale=0.8]{includes/images/wheel_w_gear_2_blueprint.png}
+        \caption{Koleso s ozubenými kolesami}
+        \label{fig:wheel_w_gear}
+\end{figure}
 
 \section{Software}
 \label{sec:software}
