--- a/FEIStyle/includes/core.tex
+++ b/FEIStyle/includes/core.tex
@@ -181,7 +181,8 @@ Postup na~inicializáciu ESP IDF a~následné spustenie projektu je nasledovný:
 
 Alternatívne spustenie je možné pomocou platformy \textbf{Visual Studio Code} s~nainštalovaným rozšírením
 \textbf{ESP-IDF}~\cite{espIDF}.
-
+\subsection{UDP Komunikácia}
+Pre spolahlivejšie ladenie a sledovanie správania programu sme implementovali UDP komunikáciu v prostredí Qt Creator v jazyku C++. Táto komunikácia nám umožnila používať realtime grafy na sledovanie správania mikromyši. Súčasťou implementácie bolo aj vytvorenie servera a komunikácia medzi PCB mikromyši a serverom.
 \subsection{Senzory}
 
 \subsubsection{VL53L1X}
