--- a/RiadenieProjektu/example_paper.tex
+++ b/RiadenieProjektu/example_paper.tex
@@ -7,14 +7,14 @@
 \documentclass[rp, m]{FEIstyle}
 % \documentclass[sp, m, en]{FEIstyle} % If you want to write the thesis in English, add the argument `en`
 
-\FEIauthor{Bc. Eduard Zelenay Bc. Erik Móčik Bc. Filip Lobpreis Bc. Jakub Močarník Bc. Maroš Kocúr Bc. Matúš Machata Bc. Timotej Polc}
+\FEIauthor{Bc. Eduard Zelenay Bc. Erik Mócik Bc. Filip Lobpreis Bc. Jakub Močarník Bc. Maroš Kocúr Bc. Matúš Machata Bc. Timotej Polc}
 \FEItitle{Micro mouse}
 \FEItitleEn{Micro mouse}
 \FEIcourse{Tímový projekt }
 \FEIcourseEn{Team project}
 \FEIcourseTag{I--TP}
 \FEIlecturer{doc. Ing. Andrej Babinec, PhD.}
-% \FEITA{Ing. Marián Tárník, PhD.}
+\FEITA{Bc. Maroš Kocúr}
 
 \FEIglossaries{includes/glossary}
 \bibliography{includes/bibliography.bib}
@@ -28,7 +28,7 @@
 \FEIcover
 \FEItitlePage
 \FEIcontent
-\FEIlistOfFiguresAndTables
+% \FEIlistOfFiguresAndTables
 
 \mainmatter
 
