--- a/RiadenieProjektu/includes/conclusion.tex
+++ b/RiadenieProjektu/includes/conclusion.tex
@@ -1,1 +1,6 @@
 % !TEX root = ../example_paper.tex
+Vytvorenie tohto plánu projektu nám poskytlo jasné usmernenie a štruktúrovaný prístup k našej práci. Počas prvých týždňov sme úspešne identifikovali úlohy a rozdelili sme ich medzi členov tímu, čím sme dosiahli efektívnu spoluprácu a koordináciu. Pravidelné stretnutia a komunikácia prostredníctvom Discordu nám umožnili udržiavať pokrok projektu a rýchlo riešiť prípadné problémy a otázky.
+
+Napriek niektorým výzvam, ako boli dodávky nesprávnych typov motorov, sme dokázali flexibilne reagovať a nájsť riešenia, čím sme dosiahli pokrok v našom projekte.
+
+Sme motivovaní a odhodlaní pokračovať v našej práci a veríme, že s pevným tímom a dobre definovaným plánom dosiahneme úspech v našom projekte. Momentálne je myška schopná prejsť štandardizované rozmery súťažného bludiska s úspešným dosiahnutím cieľa.
