--- a/RiadenieProjektu/includes/introduction.tex
+++ b/RiadenieProjektu/includes/introduction.tex
@@ -1,3 +1,3 @@
 % !TEX root = ../example_paper.tex
-
+Tento dokument predstavuje plán práce pre projekt vytvorenia autonómnej myšky pre súťaž ISTROBOT. Cieľom projektu je navrhnúť a implementovať hardvérové a softvérové riešenia umožňujúce myške prejsť bludiskom s čo najlepším časom a presnosťou. V dokumente sa nachádza predstavenie tímu, rozdelenie úloh, plánované metódy práce a koordinácia projektu počas jednotlivých týždňov. Detailné úlohy a ciele sú rozdelené do týždenných intervalov, pričom každý člen tímu má jasne definované zodpovednosti. Komunikácia v tíme prebieha prostredníctvom platformy Discord a správa kódu je realizovaná pomocou GitHubu.
 
