--- a/FEIStyle/example_paper.tex
+++ b/FEIStyle/example_paper.tex
@@ -14,7 +14,7 @@
 \FEIcourseEn{Team project}
 \FEIcourseTag{I--TP}
 \FEIlecturer{doc. Ing. Andrej Babinec, PhD.}
-% \FEITA{Ing. Marián Tárník, PhD.}
+\FEITA{Bc. Maroš Kocúr}
 
 \FEIglossaries{includes/glossary}
 \bibliography{includes/bibliography.bib}
