--- a/FEIStyle/includes/conclusion.tex
+++ b/FEIStyle/includes/conclusion.tex
@@ -1,1 +1,10 @@
 % !TEX root = ../example_paper.tex
+Na tomto zadaní sme sa naučili komunikovať a riešiť problémy ako tím. 
+
+Na záver môžeme konštatovať, že úlohy projektu MicroMouse boli úspešne splnené. Plne sme využili potenciál celého tímu a maximálne sme sa snažili využiť všetky nami zadefinované senzory. Optimalizáciou softvéru sme dosiahli, že robot dokázal prechádzať úzkymi uličkami bez nárazov, čo výrazne prispelo k jeho celkovej efektivite a presnosti.
+
+Počas projektu sme však narazili na problémy s pohonom, konkrétne so zablokovaním prevodovky, čo spôsobovalo nepresnosť v odometrii. Tieto problémy nám znemožnili využitie odometrie na lokalizáciu robota. 
+
+V druhej verzii projektu sa zameriame na odstránenie týchto nedostatkov, aby sme mohli plne využiť odometriu na presnú lokalizáciu robota. A taktiež by sme chceli upraviť hardware, keďže máme k dispozícii presne rozmery senzorov a motorov a odladili sme chyby týkajúce sa hardware na prvej verzii, čo by mohlo pomôcť robotu pohybovať sa plynulejšie a pomôže to taktiež s váhou robota. Na nasledujúce hardwarove úpravy by sme vyladili regulátory a robot sa bude správať rovnako ako v prvej verzii. 
+
+Veríme, že tieto skúsenosti a získané poznatky nám umožnia pokračovať v ďalšom vývoji a dosiahnuť ešte lepšie výsledky v budúcich verziách MicroMouse.
