--- a/FEIStyle/example_paper.tex
+++ b/FEIStyle/example_paper.tex
@@ -14,7 +14,7 @@
 \FEIcourseEn{Team project}
 \FEIcourseTag{I--TP}
 \FEIlecturer{doc. Ing. Andrej Babinec, PhD.}
-\FEITA{ }
+\FEITA{Bc. Maroš Kocúr}
 
 \FEIglossaries{includes/glossary}
 \bibliography{includes/bibliography.bib}
@@ -27,11 +27,9 @@
 \FEIpdfInfo
 \FEIcover
 \FEItitlePage
+\FEIthanks
 \FEIcontent
 \FEIlistOfFiguresAndTables
-\FEIlistOfGlossaries
-\FEIlistOfAlgorithms
-\FEIlistOfListings
 
 \mainmatter
 
@@ -45,9 +43,8 @@
 
 \backmatter
 
-\FEIlistOfAppendix
-\FEIappendix{Štruktúra elektronického nosiča\label{att:A}}{includes/attachmentA}
-\FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
-\FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
+% \FEIlistOfAppendix
+% \FEIappendix{Štruktúra elektronického nosiča\label{att:A}}{includes/attachmentA}
+% \FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
+% \FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
 \end{document}
-
