--- a/FEIStyle/includes/glossary.tex
+++ b/FEIStyle/includes/glossary.tex
@@ -1,2 +1,6 @@
+\newacronym{sw}{SW}{Star Wars}
+\newacronym{hw}{HW}{Halo Wars}
+\newacronym{cdma}{CDMA}{Code Division Multiple Access}
+\newacronym{gsm}{GSM}{Global System for Mobile communication}
 \newacronym{ToF}{ToF}{Time of Flight}
 \newacronym{PWM}{PWM}{Pulse width modulation}
